...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7t0-66-AqH">
                                                        <rect key="frame" x="101.5" y="3" width="117" height="30"/>
                                                        <state key="normal" title="anonymousLogin"/>
                                                        <connections>
                                                            <action selector="anonymLoginButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1u4-NS-Ppl"/>
...
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="contactFieldId" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3fK-2l-cbw">
                                                        <rect key="frame" x="20" y="56" width="280" height="0.0"/>
                                                        <color key="backgroundColor" white="0.92444196430000003" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                                    </textField>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="contactFieldValue" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAT-sM-LtP">
                                                        <rect key="frame" x="20" y="58" width="280" height="30"/>
                                                        <color key="backgroundColor" white="0.92444196430000003" alpha="1" colorSpace="calibratedWhite"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4nO-oO-cCD">
                                                        <rect key="frame" x="143" y="90" width="34" height="29.5"/>
                                                        <state key="normal" title="login"/>
                                                        <connections>
                                                            <action selector="loginButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lyk-04-8AG"/>
...
                                                        <rect key="frame" x="33" y="124.5" width="254" height="30"/>
                                                        <subviews>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="sid" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vZf-1Q-mna">
                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
                                                                <color key="backgroundColor" white="0.92444196430000003" alpha="1" colorSpace="calibratedWhite"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xL6-Fn-TfC">
                                                                <rect key="frame" x="120" y="0.0" width="134" height="30"/>
                                                                <state key="normal" title="trackMessageOpen"/>
                                                                <connections>
                                                                    <action selector="trackMessageButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6ms-cc-exM"/>
...
                                                        </constraints>
                                                    </view>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="customEventName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="stu-X8-Dyp">
                                                        <rect key="frame" x="20" y="177.5" width="280" height="30"/>
                                                        <color key="backgroundColor" white="0.92444196430000003" alpha="1" colorSpace="calibratedWhite"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ehx-Ov-bVh">
                                                        <rect key="frame" x="96.5" y="311.5" width="127" height="30"/>
                                                        <state key="normal" title="trackCustomEvent"/>
                                                        <connections>
                                                            <action selector="trackCustomEventButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mRk-jH-Dok"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hbl-bL-FUJ">
                                                        <rect key="frame" x="138" y="369" width="44" height="30"/>
                                                        <state key="normal" title="logout"/>
                                                        <connections>
                                                            <action selector="logoutButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B9X-PX-7U8"/>
...
